fixed overflow

--- a/src/components/Projects/styles.scss
+++ b/src/components/Projects/styles.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  
+  overflow-x: hidden;
   gap: 3rem;
   margin-bottom: 3rem;
   
